# clients

./: .eslintrc.json  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: build-desktop.yml  scan.yml
.storybook/: main.ts
apps/browser/: tsconfig.json
apps/browser/src/background/: main.background.ts
apps/browser/src/popup/: app-routing.module.ts  app.component.ts  app.module.ts
apps/cli/: package.json
apps/cli/src/: oss-serve-configurator.ts  vault.program.ts
apps/cli/src/commands/: download.command.ts  edit.command.ts  get.command.ts
apps/cli/src/service-container/: service-container.ts
apps/cli/src/vault/: create.command.ts
apps/desktop/: electron-builder.json  package.json  tsconfig.json
apps/desktop/desktop_native/: build.js
apps/desktop/desktop_native/core/: Cargo.toml
apps/desktop/desktop_native/napi/: Cargo.toml  index.d.ts  index.js  package.json
apps/desktop/desktop_native/napi/src/: lib.rs
apps/desktop/desktop_native/proxy/: Cargo.toml
apps/desktop/native-messaging-test-runner/: package-lock.json  package.json
apps/desktop/scripts/: after-pack.js
apps/desktop/src/: main.ts
apps/desktop/src/app/: app-routing.module.ts  app.component.ts  (+1 more)
apps/web/: tsconfig.json  webpack.config.js
bitwarden_license/bit-cli/src/: service-container.ts
bitwarden_license/bit-common/: tsconfig.json
bitwarden_license/bit-web/: tsconfig.json
libs/common/: tsconfig.json
libs/components/src/: tw-theme.css
libs/shared/: tsconfig.libs.json
libs/tools/slider/: package.json
(+238 files in other folders)
