[package]
edition = "2021"
exclude = ["index.node"]
license = "GPL-3.0"
name = "desktop_napi"
version = "0.0.0"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
manual_test = []

[dependencies]
anyhow = "=1.0.86"
base64 = "0.22.1"
desktop_core = { path = "../core" }
hex = "0.4.3"
napi = { version = "=2.16.6", features = ["async"] }
napi-derive = "=2.16.5"
rand_chacha = { version = "0.3.1", features = ["simd"] }
russh-cryptovec = "0.7.3"
ssh-key = { version = "0.6.6", default-features = false, features = ["encryption", "ed25519", "rsa", "getrandom"] }
tokio = "1.39.1"
tokio-stream = "0.1.15"

[build-dependencies]
napi-build = "=2.1.3"
